--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+    flatDir {
+        dirs 'lib'
+    }
 }
 
 uploadArchives {
@@ -46,6 +49,7 @@ uploadArchives {
 
 dependencies {
     compile 'org.tfelab:core:1.0-SNAPSHOT'
+    compile 'org.openpnp:opencv:3.4.1'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
