--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
+    // https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-ecs
+    compile group: 'com.aliyun', name: 'aliyun-java-sdk-ecs', version: '4.5.0'
+
+    // https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-core
+    compile group: 'com.aliyun', name: 'aliyun-java-sdk-core', version: '3.2.8'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     runtime 'mysql:mysql-connector-java:5.1.37'
 }
