--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ uploadArchives {
 
 dependencies {
 
-    compile 'one.rewind:common:1.0.10-SNAPSHOT'
+    compile 'one.rewind:common:1.0.12-SNAPSHOT'
 
     compile name: 'opencv-341'
 
@@ -88,8 +88,12 @@ task copyFiles(group: 'tetra') << {
         into 'src/main/dist'
     }
     copy {
-        from fileTree('www')
-        into 'src/main/dist/www'
+        from 'squid.sh'
+        into 'src/main/dist'
+    }
+    copy {
+        from 'id_rsa_2048'
+        into 'src/main/dist'
     }
 }
 
