--- a/src/main/resources/conf/PooledDataSource.conf
+++ b/src/main/resources/conf/PooledDataSource.conf
@@ -1,6 +1,6 @@
 {
   "china_stock_qs": {
-    "url": "jdbc:mysql://10.0.0.62:3306/crawler",
+    "url": "jdbc:mysql://10.0.0.62:3306/scheduler",
     "username": "root",
     "password": "sdyk",
     "initialPoolSize": 5,
@@ -9,8 +9,8 @@
     "maxPoolSize": 80,
     "maxStatements": 500
   },
-  "crawler": {
-    "url": "jdbc:mysql://10.0.0.62:3306/crawler",
+  "scheduler": {
+    "url": "jdbc:mysql://10.0.0.62:3306/scheduler",
     "username": "root",
     "password": "sdyk",
     "initialPoolSize": 5,
