--- a/src/main/resources/conf/DockerHostManager.conf
+++ b/src/main/resources/conf/DockerHostManager.conf
@@ -1,5 +1,5 @@
 {
-	"privateKey": "docker.pem",
+	"privateKey": "gcy-docker.pem",
 	"maxContainerNum": 40,
 	"seleniumBeginPort": 31000,
 	"vncBeginPort": 32000
