--- a/src/main/resources/conf/DockerHost.conf
+++ b/src/main/resources/conf/DockerHost.conf
@@ -2,7 +2,7 @@
 	"privateKey": "gcy-docker.pem",
 	"maxContainerNum": 40,
 	"chromeDriverContainer": {
-        "defaultImageName": "selenium/standalone-chrome-debug",
+        "defaultImageName": "xdotool-chrome-xvfb/v1",
         "seleniumBeginPort": 31000,
         "vncBeginPort": 32000
 	}
