更新测试用例 调整结构

--- a/src/main/resources/conf/DockerHost.conf
+++ b/src/main/resources/conf/DockerHost.conf
@@ -1,5 +1,5 @@
 {
-	"privateKey": "gcy-docker.pem",
+	"privateKey": "docker.pem",
 	"maxContainerNum": 40,
 	"chromeDriverContainer": {
         "defaultImageName": "xdotool-chrome-xvfb/v1",
