自动部署测试

--- a/src/main/resources/conf/PooledDataSource.conf
+++ b/src/main/resources/conf/PooledDataSource.conf
@@ -1,7 +1,7 @@
 {
   "china_stock_qs": {
-    "url": "jdbc:mysql://10.0.0.61:3306/crawler",
-    "username": "sdyk",
+    "url": "jdbc:mysql://10.0.0.62:3306/crawler",
+    "username": "root",
     "password": "sdyk",
     "initialPoolSize": 5,
     "minPoolSize": 5,
@@ -10,8 +10,8 @@
     "maxStatements": 500
   },
   "crawler": {
-    "url": "jdbc:mysql://10.0.0.61:3306/crawler",
-    "username": "sdyk",
+    "url": "jdbc:mysql://10.0.0.62:3306/crawler",
+    "username": "root",
     "password": "sdyk",
     "initialPoolSize": 5,
     "minPoolSize": 5,
