--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ uploadArchives {
 
 dependencies {
 
-    compile 'one.rewind:common:1.0.63-SNAPSHOT'
+    compile 'one.rewind:common:1.0.62-SNAPSHOT'
 
     compile name: 'opencv-341'
 
@@ -66,6 +66,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-core
     compile group: 'com.aliyun', name: 'aliyun-java-sdk-core', version: '3.2.8'
+
+    // https://mvnrepository.com/artifact/redis.clients/jedis
+    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     runtime 'mysql:mysql-connector-java:5.1.37'
