--- a/src/main/resources/conf/PooledDataSource.conf
+++ b/src/main/resources/conf/PooledDataSource.conf
@@ -1,6 +1,6 @@
 {
-  "china_stock_qs": {
-    "url": "jdbc:mysql://10.0.0.62:3306/crawler",
+  "sdyk_raw_eval": {
+    "url": "jdbc:mysql://10.0.0.62:3306/sdyk_raw_eval",
     "username": "root",
     "password": "sdyk",
     "initialPoolSize": 5,
@@ -9,8 +9,8 @@
     "maxPoolSize": 80,
     "maxStatements": 500
   },
-  "crawler": {
-    "url": "jdbc:mysql://10.0.0.62:3306/crawler",
+  "sdyk_raw": {
+    "url": "jdbc:mysql://10.0.0.62:3306/sdyk_raw",
     "username": "root",
     "password": "sdyk",
     "initialPoolSize": 5,
@@ -18,5 +18,15 @@
     "acquireIncrement": 5,
     "maxPoolSize": 80,
     "maxStatements": 500
-  }
+  },
+  "sdyk_raw_snapshot": {
+    "url": "jdbc:mysql://10.0.0.62:3306/sdyk_raw_snapshot",
+    "username": "root",
+    "password": "sdyk",
+    "initialPoolSize": 5,
+    "minPoolSize": 5,
+    "acquireIncrement": 5,
+    "maxPoolSize": 80,
+    "maxStatements": 500
+  },
 }
