update ES index_mapping

--- a/index_mappings/Project.json
+++ b/index_mappings/Project.json
@@ -15,6 +15,9 @@
         "analyzer": "ik_max_word",
         "boost": 4
       },
+      "origin_id": {
+        "type":"keyword"
+      },
       "location": {
         "type":"text"
       },
