--- a/src/main/resources/conf/BasicRequester.conf
+++ b/src/main/resources/conf/BasicRequester.conf
@@ -3,6 +3,7 @@
   "readTimeout": 60000,
   "chromeDriverAgentNum": 1,
   "requestPerSecondLimit": 5,
-  "chromeDriver": "chromedriver"
-  "requesterLocalIp": "10.0.0.249"
+  "chromeDriver": "chromedriver",
+  "pageLoadTimeout": 10000,
+  "requesterLocalIp": "10.0.0.112"
 }
