--- a/index_mappings/Project.json
+++ b/index_mappings/Project.json
@@ -19,7 +19,8 @@
         "type":"keyword"
       },
       "location": {
-        "type":"text"
+        "type":"text",
+        "analyzer": "ik_max_word"
       },
       "origin_from": {
         "type":"text"
